--- a/Student_scores_linear_regression.ipynb
+++ b/Student_scores_linear_regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNpWvz3/ZmnpOaTG3x4B60b",
+      "authorship_tag": "ABX9TyMkwlda/Y84Y3fnsOHjsg/l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "jPDGvem7sHia"
       },
@@ -69,9 +69,9 @@
           "height": 833
         },
         "id": "qc2uDsw1sWbX",
-        "outputId": "b30ac505-6c99-4d39-e849-1fea3a50af06"
+        "outputId": "4de09bcc-20a9-4ae0-94f9-b0d68b08d2a4"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -106,7 +106,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-811d3769-d1f9-443b-8997-2868a4010ace\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-468414ab-f699-4dab-8053-6c95fa12379f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -261,7 +261,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-811d3769-d1f9-443b-8997-2868a4010ace')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-468414ab-f699-4dab-8053-6c95fa12379f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -313,12 +313,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-811d3769-d1f9-443b-8997-2868a4010ace button.colab-df-convert');\n",
+              "        document.querySelector('#df-468414ab-f699-4dab-8053-6c95fa12379f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-811d3769-d1f9-443b-8997-2868a4010ace');\n",
+              "        const element = document.querySelector('#df-468414ab-f699-4dab-8053-6c95fa12379f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -338,8 +338,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-9851599c-8d68-406b-b2d3-bf401010d5e5\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9851599c-8d68-406b-b2d3-bf401010d5e5')\"\n",
+              "<div id=\"df-8e332860-d111-4fd4-9433-de93fd2494ce\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8e332860-d111-4fd4-9433-de93fd2494ce')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -458,14 +458,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-9851599c-8d68-406b-b2d3-bf401010d5e5 button');\n",
+              "        document.querySelector('#df-8e332860-d111-4fd4-9433-de93fd2494ce button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_ad5ffb0d-0f23-4ac0-8598-6827ee5c6515\">\n",
+              "  <div id=\"id_a2b37402-0d8f-4f84-b262-4d1609914577\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -509,7 +509,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_ad5ffb0d-0f23-4ac0-8598-6827ee5c6515 button.colab-df-generate');\n",
+              "        document.querySelector('#id_a2b37402-0d8f-4f84-b262-4d1609914577 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -530,7 +530,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 17
         }
       ]
     },
@@ -551,9 +551,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GR4SkW5Tshar",
-        "outputId": "f0a6ad91-c12b-42ff-9f81-9bd3371b9a24"
+        "outputId": "e74f5472-bd57-48d1-fa93-5bcc46adf69a"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -563,7 +563,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 18
         }
       ]
     },
@@ -586,9 +586,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pCWhGltdsj7B",
-        "outputId": "950ab13b-a1d3-4997-b588-8ec49213d5b4"
+        "outputId": "efcfc8ce-83dc-485b-b45e-fa3b61b528a5"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -600,7 +600,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 19
         }
       ]
     },
@@ -621,7 +621,7 @@
       "metadata": {
         "id": "xb1oqoSxv8ox"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -634,9 +634,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3bfIPaMowIqN",
-        "outputId": "72777605-b92f-4001-8d1d-75cfc961562d"
+        "outputId": "07586241-007e-4e74-f02b-8ffdaef21554"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -646,7 +646,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 21
         }
       ]
     },
@@ -669,9 +669,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "88WR6t0OwKRt",
-        "outputId": "53c440e2-27ec-4e16-f5bc-e8b91feedaa3"
+        "outputId": "e3d8cfb6-dfe9-4f73-e310-115a5fa3676f"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -681,7 +681,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 22
         }
       ]
     },
@@ -704,9 +704,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6tq09LJhwVug",
-        "outputId": "dab5ef1e-ecbf-4abd-8a6e-742f369318f5"
+        "outputId": "c6b35611-6511-444a-fd37-dcfab6c0c5e0"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -724,7 +724,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 23
         }
       ]
     },
@@ -744,9 +744,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6H1eBF1DwZpX",
-        "outputId": "4cdc6691-b463-4ce2-a71a-dab6d0908da6"
+        "outputId": "11bc0893-8bbf-421d-daf4-63b21f6ebdf3"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -756,7 +756,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 24
         }
       ]
     },
@@ -780,9 +780,9 @@
           "height": 466
         },
         "id": "i7j3u6yEyPP4",
-        "outputId": "28d1c861-93bf-42ac-eb4e-3f68ed06ed86"
+        "outputId": "6d761dc5-ec25-44d6-da7c-1feead45b716"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -792,7 +792,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 25
         },
         {
           "output_type": "display_data",
@@ -831,12 +831,12 @@
         "\n",
         "X = df.loc[:,['Hours']]\n",
         "Y = df.Scores\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)"
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.3, random_state=42)"
       ],
       "metadata": {
         "id": "B-rnPLjVxB4w"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -851,11 +851,13 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.linear_model import LinearRegression"
+      ],
       "metadata": {
         "id": "kruQlPHNzHhP"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     }
   ]
